# rusty-suffix

./: Cargo.toml  README.md
examples/: README.md  queries.fa  reference.fa  results_sample.sam  table.txt
src/: config.rs  fasta.rs  index.rs  lib.rs  main.rs  query.rs  sam.rs  search.rs  table.rs
