[package]
name = "rusty-suffix"
version = "0.1.0"
edition = "2021"

[dependencies]
needletail = "0.5"
clap = { version = "4.5", features = ["derive"] }
bio = "2.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
ndarray = "0.15"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
